--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -6,25 +6,28 @@
           <a href="#" class="footer-links">
             <p class="company-name">Order Management</p>
           </a>
-          <p class="company-desc">Le Lorem Ipsum est simplement du faux texte employé dans
-            la composition et la mise en page avant impression.
-          </p>
-
+          <div class="company-desc">
+            <p>Le Lorem Ipsum est simplement du faux texte employé dans
+              la composition et la mise en page avant impression.
+            </p>
+          </div>  
+          <div class="social-icons">
+            <i class="fa fa-twitter"></i>
+            <i class="fa fa-facebook-f"></i>
+            <i class="fa fa-instagram"></i>
+          </div>  
         </div>
         <div class="col-md-4 footer-content">
           <a class="footer-links">Other Links</a>
           <ul class="list1">
             <li>
-              <a href="#">Link1</a>
+              <a href="#">Home</a>
             </li>
             <li>
-              <a href="#">Link2</a>
+              <a href="#">SignIn</a>
             </li>
             <li>
-              <a href="#">Link3</a>
-            </li>
-            <li>
-              <a href="#">Link4</a>
+              <a href="#">SignUP</a>
             </li>
           </ul>
         </div>
