--- a/src/app/shared/login/login.component.html
+++ b/src/app/shared/login/login.component.html
@@ -44,17 +44,17 @@
               </div>
             </div>
             <button
-              class="btn btn-lg btn-primary btn-block mb-1"
+              class="btn btn-lg btn-block mb-1"
               type="submit"
               [disabled]="loginForm.invalid"
             >
               Sign in
             </button>
-            <label class="checkbox float-left">
+            <!-- <label class="checkbox float-left">
               <input type="checkbox" value="remember-me" />
               Remember me
-            </label>
-            <a href="#" class="float-right">Need help?</a>
+            </label> -->
+            <!-- <a href="#" class="float-right">Need help?</a> -->
           </form>
         </div>
       </div>
