--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -3,9 +3,9 @@
   <section class="cart-section">
     <div class="container">
       <div class="empty-cart">
-        <button type="button" class="btn btn-primary" (click)="deleteCarItem(1,0)">Delete All</button>
+        <button type="button" class="btn btn-danger del-btn" (click)="deleteCarItem(1,0)">Delete All</button>
       </div>
-      <h1>Cart Items</h1>
+      <h1>C<span class="style">art Item</span>s</h1>
 
       <div class="shopping-cart">
         <div class="product" *ngFor="let cart of cartProducts; let i = index">
@@ -13,22 +13,24 @@
             <div class="product-image">
               <img src="assets/cement.jpg" />
             </div>
-            <div class="product-details">
-              <div class="product-title">{{ cart.company_name }}</div>
-            </div>
-            <div class="product-price">
-              <p>&#8360; {{ cart.price }}</p>
-            </div>
-            <div class="product-quantity">
-              <input type="number" value="{{ cart.quantity }}" (input)="chageCartValue( cart, 0, $event.target.value, 1)" />
-            </div>
-            <div class="product-line-price">
-                <p>&#8360; {{ cart.totalPrice }}</p>
+            <div class="">
+              <div class="product-details">
+                <div class="product-title">{{ cart.company_name }}</div>
               </div>
+              <div class="product-price">
+                <p>&#8360; {{ cart.price }}</p>
+              </div>
+              <div class="product-quantity">
+                <input type="number" value="{{ cart.quantity }}" (input)="chageCartValue( cart, 0, $event.target.value, 1)" />
+              </div>
+              <div class="product-line-price">
+                  <p>&#8360; {{ cart.totalPrice }}</p>
+              </div>
+            </div>  
             <div class="product-removal">
-              <div (click)="deleteCarItem(0, cart.cart_id)">
-                <i class="fa fa-times"></i>
-              </div>
+              <button type="button" class="btn btn-xsm btn-danger" (click)="deleteCarItem(0, cart.cart_id)">
+                <i class="fa fa-trash"></i>
+              </button>
             </div>
           
           </div>
@@ -60,10 +62,10 @@
               <p *ngFor="let bars of cart.bar_products"> &#8360; {{ bars.value*bars.quantity }}</p>
                 <!-- <p>&#8360; {{ cart.barTotal }}</p> -->
               </div>
-            <div>
-              <div class="product-removal" (click)="deleteCarItem(0, cart.cart_id)">
-                <i class="fa fa-times"></i>
-              </div>
+            <div class="product-removal">
+              <button type="button" class="btn btn-xsm btn-danger" (click)="deleteCarItem(0, cart.cart_id)">
+                <i class="fa fa-trash"></i>
+              </button>
             </div>
           </div>
         </div>
@@ -79,13 +81,16 @@
     </div>
     <div class="container">
       <div class="empty-cart">
-        <button type="button" class="btn btn-success" (click) = "checkOut()">CheckOut</button>
+        <button type="button" class="btn btn-md checkout-btn" (click) = "checkOut()">CheckOut</button>
       </div>
     </div>  
   </section>
 </div>
 <div *ngIf="!cartItemsLength">
-  <div class="container empty_cart">
-   <h1>No Cart Items available</h1>
+  <div class="empty_cart">
+    <img src="../../assets/empty_cart.jpg" alt="No cart items are selected">
+    <h4>Unfortunately, your cart is empty</h4>
+    <p>Please add something into your cart</p>
+    <button type="button" class="btn btn-md no-cart-btn" (click)="addItem()">Continue Shopping</button>
   </div>
 </div> 
