--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,11 +1,8 @@
 <div class="container-fluid header-widget">
   <nav class="navbar navbar-expand-md navbar-fixed-top">
     <a href="#" class="navbar navbar-brand logo-text">
-      <h2>Order Management</h2>
+      <h2>Order Management</h2> 
     </a>
-    <!-- <button class="navbar-toggler" data-toggle="collapse" data-target="#menu">
-      <span class="navbar-toggler-icon"></span>
-    </button> -->
     <button
       class="navbar-toggler navbar-toggler-right"
       type="button"
@@ -18,16 +15,16 @@
     </button>
     <div class="collapse navbar-collapse justify-content-end" id="menu">
       <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link active" [routerLink]="['home']"><i class="fa fa-home cart-custom"> Home</i></a>
+        <li class="nav-item" [routerLinkActive]="active">
+          <a class="nav-link" [routerLink]="['home']"><i class="fa fa-home cart-custom"> Home</i></a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item" [routerLinkActive]="active">
           <a class="nav-link" [routerLink]="['cart']"><i class="fa fa-shopping-cart  cart-custom"> Cart</i></a>
         </li>
-        <li class="nav-item" *ngIf="!isShowhide">
+        <li class="nav-item" *ngIf="!isShowhide" [routerLinkActive]="active">
           <a class="nav-link" [routerLink]="['login']"><i class="fa fa-sign-in cart-custom"> SignIn</i></a>
         </li>
-        <li class="nav-item" *ngIf="!isShowhide">
+        <li class="nav-item" *ngIf="!isShowhide" [routerLinkActive]="active">
           <a class="nav-link" [routerLink]="['signUp']"><i class="fa fa-user-plus cart-custom"> SignUp</i></a>
         </li>
         <li class="nav-item dropdown custom-dropdown" *ngIf="isShowhide">
@@ -36,24 +33,18 @@
             class="nav-link dropdown-toggle"
             data-toggle="dropdown"
             data-target="dropdown_target"
-            href="#">USER</a>
+            href="#">{{user.owner_name | uppercase}}</a>
           <div class="dropdown-menu dropdown-menu-left drop1" aria-labelledby="dropdown_target">
             <div class="image1">
-              <div>
-                <img src="assets/user.jpg" alt="image" class="user-image1" />
-              </div>
-              <div>
-                <p>Name</p>
-                <p class="drop-text">Designation</p>
-              </div>
+                <p>{{user.owner_name}}</p>
             </div>
-            <hr />
-            <a class="dropdown-item dd" [routerLink]="['user']">My Profile</a>
-            <hr />
+            <hr/>
+            <a class="dropdown-item dd" [routerLink]="['user/profile']">My Profile</a>
+            <hr/>
             <a class="dropdown-item dd" [routerLink]="['user/myOrders']"
               >My Orders</a
             >
-            <hr />
+            <hr/>
             <div class="drop-button">
               <button type="button" class="btn btn-primary" (click)="logout()">
                 <i class="fa fa-sing-out cart-custom"> Logout</i>
