--- a/src/app/shared/login/login.component.scss
+++ b/src/app/shared/login/login.component.scss
@@ -1,5 +1,10 @@
 .card {
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+  .card-header {
+    color: #000;
+    font-size: 20px;
+    font-weight: 600;
+  }
 }
 .login {
   margin-top: 100px;
@@ -13,4 +18,14 @@
 }
 .error-message {
   color: red;
+}
+.btn-block {
+  background-color: #82ae46;
+  color: #000;
+}
+.float-right {
+  color: #000;
+  margin-top: 14px;
+  font-size: 17px;
+  font-weight: 600;
 }
