--- a/src/app/shared/signup/signup.component.html
+++ b/src/app/shared/signup/signup.component.html
@@ -151,10 +151,10 @@
               </div>
             </div>
             
-            <button class="btn btn-lg btn-primary btn-block mb-1" type="submit" [disabled]="signUpForm.invalid">
+            <button class="btn btn-lg btn-block mb-1" type="submit" [disabled]="signUpForm.invalid">
               Sign Up
             </button>
-            <a href="#" class="float-right">Need help?</a>
+            <!-- <a href="#" class="float-right">Need help?</a> -->
           </form>
         </div>
       </div>
