--- a/src/app/shared/signup/signup.component.scss
+++ b/src/app/shared/signup/signup.component.scss
@@ -1,5 +1,11 @@
 .card {
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+
+  .card-header {
+    color: #000;
+    font-size: 20px;
+    font-weight: 600;
+  }
 }
 .signUp {
   margin-top: 10px;
@@ -8,6 +14,11 @@
 .img {
   background-image: unset;
 }
-.invalid-txt{
+.invalid-txt {
   text-align: justify;
+}
+
+.btn-block {
+  background-color: #82ae46;
+  color: #000;
 }
