--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -46,6 +46,9 @@
           </ul>
         </div>
       </div>
+      <div class="copyright-text">
+        <p>Copyright All rights reserved</p>
+      </div>
     </div>
   </div>
 </footer>
