--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,21 +7,21 @@
         </ul>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="assets/caro.jpg" alt="Los Angeles" width="1100" height="500">
+                <img src="assets/caro1.jpg" alt="Los Angeles" width="1100" height="500">
                 <!-- <div class="carousel-caption">
                     <h3>Los Angeles</h3>
                     <p>We had such a great time in LA!</p>
                 </div> -->
             </div>
             <div class="carousel-item">
-                <img src="assets/caro1.jpg" alt="Chicago" width="1100" height="500">
+                <img src="assets/caro2.jpg" alt="Chicago" width="1100" height="500">
                 <div class="carousel-caption">
                     <!--  <h3>Chicago</h3>
                     <p>Thank you, Chicago!</p> -->
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="assets/caro2.jpg" alt="New York" width="1100" height="500">
+                <img src="assets/caro.jpg" alt="New York" width="1100" height="500">
                 <div class="carousel-caption">
                     <!-- <h3>New York</h3>
                     <p>We love the Big Apple!</p> -->
@@ -37,72 +37,144 @@
     </div>
 </div>
 
-<div class="container cement-section">
-    <div class="cement-widget">
-        <p class="section-heading">Ce<span class="style">ment Compa</span>ny</p>
-        <div class="row">
-            <div class="pull-center" *ngFor="let item of cementProducts; let i = index">
-                <div class=" cement-showcase">
-                    <img src="assets/cement.jpg" alt="photo">
-                    <div>
-                        <p><b>{{item.comp_name}}</b></p>
-                    </div>
-                    <div class="cement-value">
-                        <div class="pull-center">
-                            <div class="cement-price">
-                                <p><b>Price</b></p>
-                                <p><b>Qty</b></p>
-                                <p><b>&nbsp;&nbsp;Total</b></p>
-                            </div>
-                        </div>    
-                        <div class="cement-price1">
-                            <p><span>&#8377;</span>{{item.price}}<span>&#215;</span></p>
-                            <input type="text" name="qty" (input)="productValue(item, $event.target.value, i)">
-                            <span>&#61;</span>
-                            <input type="text" class="cement-input" name="total" readonly value="{{ item.totalPrice }}">
+<div class="container-fluid">
+    <div class="container cement-section">
+        <div class="widget">
+            <h2 class="section-heading">Cement Company</h2>
+            <p class="description">Your dreams are like the cement. If you water it with actions, it becomes a hard concrete mass</p>
+            <div class="row">
+                <div class="col-md-3 pull-center" *ngFor="let item of cementProducts; let i = index">
+                    <div class=" cement-showcase">
+                        <img src="assets/cement.jpg" alt="photo"> 
+                        <div>
+                            <p><b>{{item.comp_name}}</b></p>
                         </div>
-                    </div>
-                    <div>
-                        <button type="button" class="btn cart-btn" (click)="itemAddToCart(i , 1)"><i class="fa fa-shopping-cart"></i>Add To Cart</button>
+                        <div class="cement-value">
+                            <div class="pull-center">
+                                <div class="cement-price">
+                                    <p><b>Price</b></p>
+                                    <p><b>Qty</b></p>
+                                    <p><b>&nbsp;&nbsp;Total</b></p>
+                                </div>
+                            </div>    
+                            <div class="cement-price1 form-group">
+                                <p><span>&#8377;</span>{{item.price}}<span>&#215;</span></p>
+                                <input class="form-control" type="text" name="qty" (input)="productValue(item, $event.target.value, i)">
+                                <span>&#61;</span>
+                                <input class="form-control" type="text" class="cement-input" name="total" readonly value="{{ item.totalPrice }}">
+                            </div>
+                        </div>
+                        <div>
+                            <button type="button" class="btn cart-btn" (click)="itemAddToCart(i , 1)"><i class="fa fa-shopping-cart"></i>Add To Cart</button>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
+    </div>     
+</div>
+
+<div class="container-fluid bars">
+    <div class="container bar-section">
+        <div class="widget">
+            <h2 class="section-heading">Bars</h2>
+            <p class="description">We source Bars from the certified vendors of industry, who manufacture these Steel Bars using premium quality raw materials.</p>
+            <div class="row">
+                <div class="col-md-4" *ngFor="let product of barsProducts; let k = index">
+                    <div class="bar-showcase">
+                        <img src="assets/cement.jpg" alt="photo">
+                        <div>
+                            <p><b>{{ product.bar_cmp_name }}</b></p>
+                        </div>
+                        <div class="bar-value">
+                            <div class="bar-price1 form-group" *ngFor="let bar of product.barsList; let j = index">
+                                <p>{{ bar.type }}&nbsp;<span>&#8211;</span>&nbsp;</p>
+                                <p><span>&#8377;&nbsp;</span>{{ bar.value }}&nbsp;<span>&#215;&nbsp;</span></p>
+                                <input class="form-control" type="" value=""
+                                    (input)="barsQuntity(bar, $event.target.value, k, j, product.prod_bar_company_id)"
+                                    placeholder="quantity" />
+                                <span>&nbsp;&#61;&nbsp;</span>
+                                <input class="form-control bars-input-name" type="text" class="" name="total" readonly
+                                    value="{{ bar.totalPrice }}">
+
+                            </div> 
+                        </div>
+                        <div class="form-group">
+                            <label for="total-price">Total Price&nbsp;&nbsp;</label>
+                            <input class="form-control" type="text" name="total" readonly value="{{ product.totalCartPrice }}" />
+                        </div>
+                        <div>
+                            <button type="button" class="btn cart-btn" (click)="itemAddToCart(k , 2)"><i class="fa fa-shopping-cart"></i>Add To Cart</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>    
+</div>
+
+<div class="container-fluid">
+    <div class="container customer-report">
+        <div class="widget">
+            <h2 class="section-heading">Our Satisfied Customer says</h2>
+            <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt, illum ea? Doloremque tenetur, quos eos natus animi</p>
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="customer-profile">
+                        <img src="../../assets/user.jpg" alt="">
+                    </div>
+                    <div class="customer-desc">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt, illum ea? Doloremque tenetur, quos eos natus animi</p>
+                    </div>
+                    <div class="customer-data">
+                        <h4>Shiva</h4>
+                        <p>INTERFACE DESIGNER</p>
+                    </div>
+                </div>    
+                <div class="col-md-4">
+                    <div class="customer-profile">
+                        <img src="../../assets/user.jpg" alt="">
+                    </div>
+                    <div class="customer-desc">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt, illum ea? Doloremque tenetur, quos eos natus animi</p>
+                    </div>
+                    <div class="customer-data">
+                        <h4>Suzuki</h4>
+                        <p>SYSTEM ANALYST</p>
+                    </div>
+                </div> 
+                <div class="col-md-4">
+                    <div class="customer-profile">
+                        <img src="../../assets/user.jpg" alt="">
+                    </div>
+                    <div class="customer-desc">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt, illum ea? Doloremque tenetur, quos eos natus animi</p>
+                    </div>
+                    <div class="customer-data">
+                        <h4>Santhosi</h4>
+                        <p>MARKETING MANAGER</p>
+                    </div>
+                </div> 
+            </div>    
+        </div>    
     </div>
 </div>
 
-<div class="container bar-section">
-    <div class="bar-widget">
-        <p class="section-heading"><span class="style">Bars</span></p>
+<div class="container-fluid subscribe">
+    <div class="container">
         <div class="row">
-            <div class="" *ngFor="let product of barsProducts; let k = index">
-                <div class="bar-showcase">
-                    <img src="assets/cement.jpg" alt="photo">
-                    <div>
-                        <p><b>{{ product.bar_cmp_name }}</b></p>
-                    </div>
-                    <div class="bar-value">
-                        <div class="bar-price1" *ngFor="let bar of product.barsList; let j = index">
-                            <p>{{ bar.type }}&nbsp;<span>&#8211;</span>&nbsp;</p>
-                            <p><span>&#8377;&nbsp;</span>{{ bar.value }}&nbsp;<span>&#215;&nbsp;</span></p>
-                            <input type="number" value=""
-                                (input)="barsQuntity(bar, $event.target.value, k, j, product.prod_bar_company_id)"
-                                placeholder="quantity" />
-                            <span>&nbsp;&#61;&nbsp;</span>
-                            <input type="text" class="bars-input-name" name="total" readonly
-                                value="{{ bar.totalPrice }}">
-
-                        </div> 
-                    </div>
-                    <div>
-                        <label for="total-price">Total Price&nbsp;&nbsp;</label>
-                        <input type="text" name="total" readonly value="{{ product.totalCartPrice }}" />
-                    </div>
-                    <div>
-                        <button type="button" class="btn cart-btn" (click)="itemAddToCart(k , 2)"><i class="fa fa-shopping-cart"></i>Add To Cart</button>
-                    </div>
-                </div>
+            <div class="col-md-6 subscribe-text">
+                <h2>Subscribe to Our Newsletter</h2>
+                <p>Get-email updates about our latest shops and special offers</p>
             </div>
-        </div>
+            <div class="col-md-6 subscribe-form">
+                <form>
+                    <div class="form-group">
+                        <input class="form-control" type="text" placeholder="Enter email address">
+                        <input type="submit" value="Subccribe">
+                    </div>    
+                </form>
+            </div>
+        </div>    
     </div>
 </div>
