--- a/src/app/shared/footer/footer.component.scss
+++ b/src/app/shared/footer/footer.component.scss
@@ -1,6 +1,6 @@
 .footer-widget {
   font-family: lato, Roboto, "Helvetica Neue", sans-serif;
-  background-color: #82ae46;
+  background-color: #fff;
   color: #000;
   text-align: justify;
 }
@@ -26,11 +26,10 @@
 .footer-content {
   .footer-links {
     // text-align: center;
-    font-size: 24px;
+    font-size: 20px;
     text-decoration: none;
-    font-weight: 600;
-    color: #fff !important;
-    text-shadow: 1px 1px #000;
+    font-weight: 400;
+    color: #000 !important;
     &:hover {
       color: #000 !important;
     }
@@ -60,4 +59,7 @@
 
 .list1 li a {
   text-decoration: none;
+}
+.copyright-text {
+  text-align: center;
 }
