--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,4 +1,10 @@
+
 <div class="container-fluid header-widget">
+    <div class="row header-top">
+      <p class="col-md-4"><i class="fa fa-phone" aria-hidden="true"></i>+ 8886543210</p>
+      <p class="col-md-4"><i class="fa fa-paper-plane" aria-hidden="true"></i>OrederManagement@info.in</p>
+      <p class="col-md-4">Fast Delivery & Free Retuns</p>
+    </div>
   <nav class="navbar navbar-expand-md navbar-fixed-top">
     <a href="#" class="navbar navbar-brand logo-text">
       <h2>Order Management</h2>
@@ -16,27 +22,18 @@
     </button>
     <div class="collapse navbar-collapse justify-content-end" id="menu">
       <ul class="navbar-nav">
-        <li class="nav-item">
-          <a
-            class="nav-link"
-            routerLink=""
-            routerLinkActive="active"
-            [routerLinkActiveOptions]="{ exact: true }"
-            ><i class="fa fa-home cart-custom"> Home</i></a
-          >
+        <li class="nav-item" routerLinkActive="active">
+          <a class="nav-link" routerLink="home"><i class="fa fa-home cart-custom"> </i>Home</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLink="cart" routerLinkActive="active"
-            ><i class="fa fa-shopping-cart  cart-custom"> Cart</i></a
-          >
+        <li class="nav-item" routerLinkActive="active">
+          <a class="nav-link" routerLink="cart"><i class="fa fa-shopping-cart  cart-custom"> Cart</i></a>
         </li>
-        <li class="nav-item" *ngIf="!isShowhide">
-          <a class="nav-link" routerLink="login" routerLinkActive="active"
-            ><i class="fa fa-sign-in cart-custom"> SignIn</i></a
-          >
+        <li class="nav-item" *ngIf="!isShowhide" routerLinkActive="active">
+          <a class="nav-link" routerLink="login" 
+            ><i class="fa fa-sign-in cart-custom"> SignIn</i></a>
         </li>
-        <li class="nav-item" *ngIf="!isShowhide">
-          <a class="nav-link" routerLink="signUp" routerLinkActive="active"
+        <li class="nav-item" *ngIf="!isShowhide" routerLinkActive="active">
+          <a class="nav-link" routerLink="signUp" 
             ><i class="fa fa-user-plus cart-custom"> SignUp</i></a
           >
         </li>
@@ -51,12 +48,7 @@
           >
           <div
             class="dropdown-menu dropdown-menu-left drop1"
-            aria-labelledby="dropdown_target"
-          >
-            <div class="image1">
-              <p>{{ user.owner_name }}</p>
-            </div>
-            <hr />
+            aria-labelledby="dropdown_target">
             <a class="dropdown-item dd" [routerLink]="['user/profile']"
               >My Profile</a
             >
