--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -1,34 +1,57 @@
-.header-widget {
+.header-top {
   background-color: #82ae46;
+  height: 27px;
+  color: #fff;
+  text-align: center;
+  font-size: 11px;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  // vertical-align: middle;
+  padding: 3px;
+  i {
+    margin-right: 5px;
+  }
+}
+.header-widget {
+  border-bottom: solid 2px;
+  background-color: #fff;
   font-family: lato, Roboto, "Helvetica Neue", sans-serif;
 }
 
 .logo-text h2 {
-  color: #fff;
-  font-size: 22px;
-  font-weight: 700;
-  text-shadow: 0px 1px black;
-  padding: 7px;
+  color: #82ae46 !important;
+  font-weight: 800;
+  font-size: 20px;
+  text-transform: uppercase;
+  // text-shadow: 0px 1px #000;
+  padding: 14px;
   &:hover {
-    color: #000;
+    color: #000 !important;
   }
 }
 
-.navbar ul li {
-  padding: 0 13px;
-  position: relative;
-  right: 30px;
-}
-
-.navbar ul li a {
-  // text-transform: uppercase;
-  font-weight: bold;
-  font-size: 16px;
-  color: #fff;
-  // text-shadow: 1px 1px black;
-  &:hover {
-    color: #000;
-  }
+.navbar {
+  height: 67px;
+  ul li {
+    padding: 0 13px;
+    position: relative;
+    right: 30px;
+    a {
+      font-size: 11px;
+      padding-top: 0.7rem;
+      padding-bottom: 1.5rem;
+      padding-left: 20px;
+      padding-right: 20px;
+      font-weight: 400;
+      color: #000;
+      text-transform: uppercase;
+      letter-spacing: 2px;
+      opacity: 1 !important;
+      &:hover {
+        color: #82ae46;
+      }
+    }  
+  }  
 }
 
 .navbar-toggler {
@@ -75,6 +98,8 @@ hr {
   a {
     text-align: center;
     background-color: #fff !important;
+    padding-bottom: 1rem !important;
+
   }
 }
 
@@ -108,7 +133,7 @@ hr {
 }
 .dd {
   color: black !important;
-  font-size: 13px !important;
+  font-size: 11px !important;
   &:hover {
     color: #82ae46 !important;
   }
