--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -7,42 +7,39 @@
             <p class="company-name">Order Management</p>
           </a>
           <div class="company-desc">
-            <p>Le Lorem Ipsum est simplement du faux texte employé dans
-              la composition et la mise en page avant impression.
+            <p>
+              Le Lorem Ipsum est simplement du faux texte employé dans la
+              composition et la mise en page avant impression.
             </p>
-          </div>  
+          </div>
           <div class="social-icons">
             <i class="fa fa-twitter"></i>
             <i class="fa fa-facebook-f"></i>
             <i class="fa fa-instagram"></i>
-          </div>  
+          </div>
         </div>
         <div class="col-md-4 footer-content">
           <a class="footer-links">Other Links</a>
           <ul class="list1">
             <li>
-              <a href="#">Home</a>
+              <a>Home</a>
             </li>
             <li>
-              <a href="#">SignIn</a>
+              <a>SignIn</a>
             </li>
             <li>
-              <a href="#">SignUP</a>
+              <a>SignUP</a>
             </li>
           </ul>
         </div>
         <div class="col-md-4 footer-content">
           <a class="footer-links">Contact</a>
           <ul class="list1">
-            <li>
-              <i class="fa fa-home mr-2"></i>Home
-            </li>
+            <li><i class="fa fa-home mr-2"></i>Home</li>
             <li>
               <i class="fa fa-envelope mr-2"></i>Ordermanagement@gmail.com
             </li>
-            <li>
-              <i class="fa fa-phone mr-2"></i>+91 9966332255
-            </li>
+            <li><i class="fa fa-phone mr-2"></i>+91 9966332255</li>
           </ul>
         </div>
       </div>
